# chp8-rust-emulator

./: Cargo.toml  LICENSE
src/: cpu.rs  main.rs
