[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
authors = ["Todd Martin <warfox@sdf.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
sdl2 = "0.35.2"
tinyrand = "0.5.0"
